--- a/economics-search-engine.html
+++ b/economics-search-engine.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Economics Search Engine</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=9f9135c6cf607a306ee2e81c6fd3e20d">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=01c9f4b209cb94e5ac196aea6d45f63c">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css?h=ebd6f95904009a297a139802d395213f">
@@ -31,7 +31,7 @@
                     <h2 class="text-info">Economics Search Engine</h2>
                     <p></p>
                 </div>
-                <p>This page includes a Google custom search engine that searches the AER, QJE, REStud, JPE, Econometrica, and JDE.</p>
+                <p>This page includes a Google custom search engine that searches articles from all AEA journals, University of Chicago Press journals, the QJE, REStud, Econometrica, and the JDE. After searching, you may refine the search to only display articles from the AER, QJE, REStud, JPE, Econometrica, or JDE. Please feel free to submit edit requests through the contact page.</p>
             </div>
             <div class="container"><script async src="https://cse.google.com/cse.js?cx=013648599740489814559:oxh1kmkiwsc"></script>
 <div class="gcse-search"></div></div>
