--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@
                         <h4 class="text-center" style="text-align: center;">Working Papers</h4>
                         <ul class="list-group">
                             <li class="list-group-item"><a href="https://github.com/gkilleen33/gkilleen33.github.io/blob/master/papers/working/Using%20Satelites%20and%20Phones%20to%20Evaluate%20and%20Promote.pdf" target="_blank">"Using Satellites and Phones to Evaluate and Promote Agricultural Technology Adoption: Evidence from Smallholder Farms in India"</a><span>&nbsp;(with Shawn Cole, Tomoko Harigaya, and Aparna Krishna) Accepted at the <em>Journal of Development Economics</em>&nbsp;</span></li>
-                            <li class="list-group-item"><a href="https://github.com/gkilleen33/gkilleen33.github.io/blob/master/papers/working/Killeen-VSL.pdf" target="_blank">"A New Experimental Method for Estimating the Value of a Statistical Life: With an application to road safety in Kenya"&nbsp;</a></li>
+                            <li class="list-group-item"><a href="https://github.com/gkilleen33/gkilleen33.github.io/blob/master/papers/working/Killeen Non-market Demand QJE Submission.pdf" target="_blank">"A New Experimental Method for Estimating Demand for Non-market Goods: With an Application to the Value of a Statistical Life"&nbsp;</a></li>
                             <li class="list-group-item"><a href="https://github.com/gkilleen33/gkilleen33.github.io/blob/master/papers/working/Killeen-Slave-Trades.pdf" target="_blank">"The Persistent Effect of the African Slave Trades on Development: Difference-in-difference evidence"&nbsp;</a></li>
                         </ul>
                     </div>
