Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                     <li class="nav-item"><a class="nav-link" href="economics-search-engine.html">Economics Search Engine</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact&nbsp;</a></li>
                 </ul>
             </div>
         </div>
@@ -29,21 +28,19 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-dark"><strong>Grady Killeen</strong></h2>
+                    <p>gkilleen at<br> berkeley dot edu</p>
                     <p>PhD Student in Economics&nbsp;<br>University of California, Berkeley</p>
                 </div>
             </div>
             <div class="container">
                 <h4 style="text-align: center;">Biography</h4>
-                <p>Grady Killeen is a PhD student in economics at UC Berkeley.&nbsp;He graduated summa cum laude with a BS in Foreign Service from Georgetown University's Edmund A. Walsh School of Foreign Service, where he was the recipient of the Dean's Medal and the William F Notz Medal. Grady worked as a Research Associate at Harvard Business School and Precision Agriculture for Development prior to graduate school.<br><br></p>
+                <p>I am a PhD student in economics at UC Berkeley. I study economic development, with a focus on topics from industrial organization and health. I will be on the 2025-2026 academic job market. &nbsp;I graduated summa cum laude with a BS in Foreign Service from Georgetown University's Edmund A. Walsh School of Foreign Service, where I was the recipient of the Dean's Medal and the William F Notz Medal. I worked as a Research Associate at Harvard Business School and Precision Agriculture for Development prior to graduate school.<br><br></p>
                 <div class="row">
                     <div class="col">
                         <h4 style="text-align: center;">Interests</h4>
                         <ul>
                             <li>Economic Development</li>
                             <li>Industrial Organization</li>
-                            <li>Digital Technology and Development</li>
-                            <li>Remote Sensing</li>
-                            <li>Climate Change</li>
                         </ul>
                     </div>
                     <div class="col">
