--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-dark"><strong>Grady Killeen</strong></h2>
-                    <p>gkilleen at<br> berkeley dot edu</p>
+                    <img src="assets/img/headshot.jpg" alt="Grady Killeen Headshot" class="img-fluid mx-auto d-block" style="max-width: 40%; margin-bottom: 20px;">
+                    <p>gkilleen at berkeley dot edu</p>
                     <p>PhD Student in Economics&nbsp;<br>University of California, Berkeley</p>
                 </div>
             </div>
             <div class="container">
                 <h4 style="text-align: center;">Biography</h4>
-                <p>I am a PhD student in economics at UC Berkeley. I study economic development, with a focus on topics from industrial organization and health. I will be on the 2025-2026 academic job market. &nbsp;I graduated summa cum laude with a BS in Foreign Service from Georgetown University's Edmund A. Walsh School of Foreign Service, where I was the recipient of the Dean's Medal and the William F Notz Medal. I worked as a Research Associate at Harvard Business School and Precision Agriculture for Development prior to graduate school.<br><br></p>
+                <p>I am a PhD student in economics at UC Berkeley. I study economic development, with a focus on topics from industrial organization and health. <b>I will be on the 2025-2026 academic job market.</b>b> &nbsp; Prior to starting my PhD, I graduated summa cum laude from Georgetown University's Edmund A. Walsh School of Foreign Service and worked as a Research Associate at Harvard Business School and Precision Development.<br><br></p>
                 <div class="row">
                     <div class="col">
                         <h4 style="text-align: center;">Interests</h4>
