--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="container">
                 <h4 style="text-align: center;">Biography</h4>
-                <p>I am a PhD student in economics at UC Berkeley. I study economic development, with a focus on topics from industrial organization, entrepreneurship, and applied econometrics. <b>I will be on the 2025-2026 academic job market.</b>&nbsp; Prior to starting my PhD, I graduated summa cum laude from Georgetown University's Edmund A. Walsh School of Foreign Service and worked as a Research Associate at Harvard Business School and Precision Development. You can find my <a href="https://github.com/gkilleen33/gkilleen33.github.io/blob/master/assets/Killeen-CV.pdf" target="_blank">CV here</a>. Click <a href="https://gkilleen33.github.io/research.html" target="_blank"> here</a> for my research papers.<br><br></p>
+                <p>I am a PhD student in economics at UC Berkeley. I study economic development, with a focus on topics from industrial organization, entrepreneurship, and applied econometrics. <b>I will be on the 2025-2026 academic job market.</b>&nbsp; Prior to starting my PhD, I graduated summa cum laude from Georgetown University's Edmund A. Walsh School of Foreign Service and worked as a Research Associate at Harvard Business School and Precision Development. You can find my <a href="https://gkilleen33.github.io/assets/Killeen-CV.pdf" target="_blank">CV here</a>. Click <a href="https://gkilleen33.github.io/research.html" target="_blank"> here</a> for my research papers.<br><br></p>
                 <div class="row">
                     <div class="col">
                         <h4 style="text-align: center;">Interests</h4>
